<resources>
    <string name="title_app_name">ARCFMD Songlist Editor</string>
    <string name="content_start_scene_title">Please choose a songlist file</string>
    <string name="selection_work_on_default">Use default songlist file</string>
    <string name="selection_songlist_content">Select a songlist file</string>
    <string name="error_permission_denied">SD Card Access permission denied! Please enable storage permission for running this application…</string>
    <string name="title_choose_songlist">Please choose a songlist file to open</string>
    <string name="error_choose_songlist_failed">Failed to open songlist file! Please choose an available songlist</string>
    <string name="error_explorer_not_found">There is no file explorer in your device!</string>
    <string name="title_activity_select_song">Please select a song</string>
    <string name="description_song_icon">This is the cover of this song</string>
    <string name="default_song_title">Vacant</string>
    <string name="default_song_id" translatable="false">(id: default)</string>
    <string name="title_choose_operation">Please choose an operation</string>
    <string name="selection_back">Back</string>
    <string name="selection_save_and_exit">Save and Exit</string>
    <string name="selection_cancel">Cancel</string>
    <string name="selection_exit_without_saving">Exit without Saving</string>
    <string name="title_return_to_main_menu">Save changes?</string>
    <string name="description_return">If you return without saving, your changes will be lost.</string>
    <string name="title_confirm">Confirm</string>
    <string name="description_confirm_back">Do you REALLY want to exit without saving?</string>
    <string name="selection_yes">Yes</string>
    <string name="selection_no">No</string>
    <string name="message_songlist_save_success">Songlist saved successfully</string>
    <string name="error_save_failed">Songlist failed to save! orz</string>
    <string name="title_choose_song_info">Please choose the song info file to import</string>
    <string name="error_choose_song_info_failed">Failed to open song info file! Please an available song info file</string>
    <string name="message_song_info_import_success">Song info imported successfully</string>
    <string name="message_song_info_delete_success">Song info deleted successfully</string>
    <string name="error_delete_failed">Failed to delete song info!</string>
    <string name="message_song_info_duplicate_success">Song info duplicated successfully</string>
    <string name="error_song_info_not_found">Failed to find song info!</string>
    <string name="message_song_info_export_success">Song info exported successfully</string>
    <string name="error_export_failed">Failed to export song info!</string>
    <string name="description_white_background" translatable="false">White background</string>
    <string name="text_add_button">Add</string>
    <string name="text_import_button">Import</string>
    <string name="text_save_button">Save</string>
    <string name="title_sort_setting">Sort Setting</string>
    <string name="subtitle_sort_criterion">Criterion</string>
    <string name="subtitle_sort_order">Order</string>
    <string name="item_songid">Song ID</string>
    <string name="item_version">Version</string>
    <string name="item_date">Release Date</string>
    <string name="item_ascend">Ascending</string>
    <string name="item_descend">Descending</string>
    <string name="selection_finish">Finish</string>
    <string name="title_edit_song">Edit</string>
    <string name="default_edit_title">Default</string>
    <string name="default_fillin">Use default value</string>
    <string name="selection_expand">Expand</string>
    <string name="selection_collapse">Collapse</string>
    <string name="info_songid">Song ID</string>
    <string name="info_title">Song Title</string>
    <string name="info_artist">Artist</string>
    <string name="info_artist_localized">Artist (Translation)</string>
    <string name="info_bpm">BPM to Show</string>
    <string name="info_bpm_base">Base BPM</string>
    <string name="info_set">Song Pack</string>
    <string name="info_purchase">Purchase Type</string>
    <string name="info_preview_start">Preview Starts at</string>
    <string name="info_preview_end">Preview Ends at</string>
    <string name="info_side">Theme</string>
    <string name="info_bg">Background Image</string>
    <string name="info_daynight">Daytime/Night BG</string>
    <string name="info_date">Release Date</string>
    <string name="info_version">Releases in Version</string>
    <string name="info_world_unlock">Unlockes in World Mode</string>
    <string name="info_remote_dl">Requires Download</string>
    <string name="info_byd_local_unlock">Beyond Difficulty Unlockes in Local</string>
    <string name="info_songlist_hidden">Hidden before Unlocked</string>
    <string name="info_no_pp">No Copyright</string>
    <string name="info_source">Source</string>
    <string name="info_source_copyright">Copyright</string>
    <string name="info_past" translatable="false">PST</string>
    <string name="info_present" translatable="false">PRS</string>
    <string name="info_future" translatable="false">FTR</string>
    <string name="info_beyond" translatable="false">BYD</string>
    <string name="info_daynight_day">Daytime</string>
    <string name="info_daynight_night">Night</string>
    <string name="info_localized_en">ENG</string>
    <string name="info_localized_ja">JPN</string>
    <string name="info_localized_zh_hans">CHS</string>
    <string name="info_localized_zh_hant">CHT</string>
    <string name="info_localized_ko">KOR</string>
    <string name="info_difficulty_enable">Enable</string>
    <string name="info_difficulty_chart_designer">Chart Designer</string>
    <string name="info_difficulty_jacket_designer">Jacket Designer</string>
    <string name="info_difficulty_rating">Chart Rating</string>
    <string name="info_difficulty_rating_plus">Plus Mark on Chart Rating</string>
    <string name="info_difficulty_jacket_night">Jacket (Night)</string>
    <string name="info_difficulty_jacket_override">Use Unique Jacket</string>
    <string name="info_side_hikari">Hikari Side</string>
    <string name="info_side_tairitsu">Tairitsu Side</string>
    <string name="description_edit_date">Edit the date with the tool</string>
    <string name="info_date_year">Year</string>
    <string name="info_date_month">Month</string>
    <string name="info_date_date">Date</string>
    <string name="info_date_hour">Hour</string>
    <string name="info_date_minute">Minute</string>
    <string name="info_date_second">Second</string>
    <string name="selection_use_current_time">Use current time</string>
    <string name="message_song_info_save_success">Song info saved successfully</string>
    <string name="message_song_info_create_success">Song info created successfully</string>
    <string name="selection_edit">Edit</string>
    <string name="selection_duplicate">Duplicate</string>
    <string name="selection_delete">Delete</string>
    <string name="selection_export">Export</string>
    <string name="selection_save">Save</string>
    <string name="selection_show_seldom_used">Show seldom used fields</string>
    <string name="selection_hide_seldom_used">Hide seldom used fields</string>
    <string name="title_enter_song_id">Please enter song ID</string>
    <string name="description_confirm_delete">Do you REALLY want to delete?</string>
    <string name="selection_info">Info</string>
    <string name="title_author">Author</string>
    <string name="info_author" translatable="false">RichadoWonosas</string>
    <string name="title_introduction">Introduction</string>
    <string name="description_usage">This application can read songlist file in the storage and allows operations to its song infos such as editing, creating, importing and exporting, delete, etc. It is recommended to use with ARCFMD application.</string>
    <string name="default_song_difficulty">Unavailable</string>
    <string name="title_info_version">Application Version</string>
    <string name="description_side_shader">This is the shader to show which side this song is</string>
</resources>