<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/title_return_to_main_menu"
        app:titleTextColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/textReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/description_return"
        android:textColor="@android:color/primary_text_light"
        android:textSize="16sp" />

    <Button
        android:id="@+id/confirmButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="16dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|end"
        android:padding="4dp"
        android:text="@string/selection_save_and_exit"
        android:textColor="@color/tairitsuLight"
        android:theme="@style/Ripple" />

    <Button
        android:id="@+id/cancelButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="16dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|end"
        android:padding="4dp"
        android:text="@string/selection_cancel"
        android:textColor="@color/tairitsuLight"
        android:theme="@style/Ripple" />

    <Button
        android:id="@+id/alternativeButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="16dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|end"
        android:padding="4dp"
        android:text="@string/selection_exit_without_saving"
        android:textColor="@color/tairitsuLight"
        android:theme="@style/Ripple" />

</LinearLayout>