<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/title_choose_operation"
        app:titleTextColor="@android:color/primary_text_light" />

    <Button
        android:id="@+id/selection_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/icon_menu_edit"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/selection_edit"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp" />

    <Button
        android:id="@+id/selection_duplicate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/icon_menu_duplicate"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/selection_duplicate"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp" />

    <Button
        android:id="@+id/selection_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/icon_menu_export"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/selection_export"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp" />

    <Button
        android:id="@+id/selection_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/icon_menu_clear"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/selection_delete"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp" />
</LinearLayout>