<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEnterSongID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/title_enter_song_id"
        app:titleTextColor="@android:color/primary_text_light" />

    <EditText
        android:id="@+id/editNewSongID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/info_songid"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/songFinishButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="16dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:gravity="center_vertical|end"
        android:padding="4dp"
        android:text="@string/selection_finish"
        android:textColor="@color/tairitsuLight"
        android:theme="@style/Ripple" />

</LinearLayout>