<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="4dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/title_confirm"
        app:titleTextColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/textConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/description_confirm_back"
        android:textColor="@android:color/primary_text_light"
        android:textSize="16sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="8dp"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical|end"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/selection_yes"
            android:textColor="@color/tairitsuLight" />

        <Button
            android:id="@+id/noButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical|end"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/selection_no"
            android:textColor="@color/tairitsuLight" />
    </LinearLayout>

</LinearLayout>