<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/startSceneTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:paddingBottom="10sp"
            android:text="@string/content_start_scene_title"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/workDefault"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/hikariLight"
            android:enabled="true"
            android:onClick="onWorkDefault"
            android:paddingTop="16sp"
            android:paddingBottom="16sp"
            android:text="@string/selection_work_on_default"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/selectSonglist"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/tairitsuLight"
            android:enabled="true"
            android:onClick="onSelectSonglist"
            android:paddingTop="16sp"
            android:paddingBottom="16sp"
            android:text="@string/selection_songlist_content"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>